# Haskell-Genetic-Algorithm

./: .gitignore  GeneticProgramming.hs  HAMILTON_LOG.md  HAMILTON_PROMPT.md  RALPH_PROMPT.md  RESEARCH_LOG.md  RESEARCH_PLAN.md  checkpoint.csv  checkpoint_harmonic.csv  checkpoint_rigidbody.csv  genetic-algorithm.cabal  main-hamilton.hs  main-mocap.hs  main.hs
app/hamilton/: Main.hs
app/mocap/: Main.hs
article/: DRAFT.md  HAMILTON_DRAFT.md  paper.aux  paper.out  paper.tex
benchmarks/: hamilton_results.csv  results.csv
data/: harmonic.csv  rigidbody.csv  twobody.csv
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/superpowers/plans/: 2026-04-02-mocap-quaternion-sr.md  2026-04-03-hamilton-sr.md
docs/superpowers/specs/: 2026-04-02-mocap-quaternion-sr-design.md  2026-04-03-hamilton-sr-design.md
experiments/: GeneticProgramming.hs  main-hamilton.hs  main-mocap.hs  main-poly.hs  main.hs
ode_inversion/: RESULTS.md  explore_ode.py  generate_diauxic_plateau.py  growth_ode.py  ode_robust.py  plot_diauxic.py  plot_diauxic_discovery.py  step_a_constant_fitting.py  step_b_nonlinear_ode.py  step_c_diauxic_discovery.py  step_d_ahpm_discovery.py  step_e_diauxic_discovery.py  step_f_novel_discovery.py  step_g_real_data_discovery.py  step_h_characterize_first_biphasic.py
scripts/: generate_harmonic.py  generate_rigidbody.py  generate_synthetic_bvh.py  generate_twobody.py  preprocess_mocap.py
src/SymbolicRegression/: Mutate.hs  Optimize.hs  Search.hs  Tree.hs
