cabal-version:      3.0
name:               genetic-algorithm
version:            0.1.0.0

executable genetic-algorithm
    main-is:          main.hs
    other-modules:    GeneticProgramming
    build-depends:    base ^>=4.17
                    , mersenne-random
                    , vector
                    , mtl
                    , array
    hs-source-dirs:   .
    default-language: Haskell2010

executable genetic-algorithm-poly
    main-is:          main-poly.hs
    build-depends:    base ^>=4.17
                    , mersenne-random
                    , vector
                    , array
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -XTypeApplications

executable genetic-algorithm-mocap
    main-is:          main-mocap.hs
    build-depends:    base ^>=4.17
                    , mersenne-random
                    , vector
                    , array
                    , linear
                    , async
                    , time
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -XTypeApplications -O2 -threaded -rtsopts

executable genetic-algorithm-hamilton
    main-is:          main-hamilton.hs
    build-depends:    base ^>=4.17
                    , mersenne-random
                    , vector
                    , array
                    , linear
                    , async
                    , time
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -XTypeApplications -O2 -threaded -rtsopts
